# evolutionary_math

./: Cargo.toml  LICENSE  README.md
evolutionary_algebra/: Cargo.toml
evolutionary_algebra/src/: lib.rs
evolutionary_algebra/src/linear_algebra/matrix/: common.rs  mod.rs
evolutionary_algebra/src/linear_algebra/matrix/dense/: dense_matrix.rs  mod.rs
evolutionary_algebra/src/linear_algebra/matrix/sparse/: mod.rs  sparse_matrix.rs
evolutionary_analysis/: Cargo.toml
evolutionary_analysis/src/: lib.rs
evolutionary_geometry/: Cargo.toml
evolutionary_geometry/src/: lib.rs
evolutionary_geometry/src/euclidean/: hexahedron.rs  mod.rs  point.rs  tetragon.rs
evolutionary_ode/: Cargo.toml
evolutionary_opt/: Cargo.toml
evolutionary_opt/src/: lib.rs
evolutionary_pde/: Cargo.toml
evolutionary_pde/src/: lib.rs
evolutionary_pde/src/mesh/: mod.rs
evolutionary_pde/src/mesh/nonstructured/: mod.rs
evolutionary_pde/src/mesh/structured/: mesh.rs  mod.rs
evolutionary_statistics/: Cargo.toml
evolutionary_statistics/src/: lib.rs
